# Shade

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
apps/api/: package.json
apps/mpc-committee/: package.json
circuits/compliance_membership/: README.md
circuits/deposit_note_mint/: main.circom
circuits/lib/: commitment.circom
circuits/mpc_priced_settlement/: main.circom
circuits/mpc_settlement/: build.sh  main.circom
contracts/stellar/: Cargo.toml
contracts/stellar/commitment_tree/src/: lib.rs
contracts/stellar/governance_guardian/: Cargo.toml
contracts/stellar/governance_guardian/src/: lib.rs  tests.rs
contracts/stellar/intent_escrow/src/: lib.rs
contracts/stellar/nullifier_registry/src/: lib.rs
contracts/stellar/proof_verifiers/src/: lib.rs
contracts/stellar/shade_vault/src/: lib.rs
contracts/stellar/shielded_pool/: Cargo.toml
contracts/stellar/shielded_pool/src/: lib.rs  tests.rs
docs/: ASSET_BINDING.md  COMPLETED.md  MPC_SETTLEMENT.md  PENDING.md  SECURITY_MODEL.md  TESTNET_E2E.md  blockers.md  mainnet-readiness-checklist.md  protocol-fixes.md  test-report.md  testnet-transactions.md
scripts/: circuits-build.ts  circuits-test.ts  contracts-test.ts  db-migrate.ts  deploy-mpc-verifier.ts  deploy-multi-asset.ts  deploy-shielded-pool.ts  deploy-stellar-contracts.ts  deposit-ui-test.ts  frontend-flow-test.ts  fund-solver.ts  init-stellar-contracts.ts  security-gates.ts  setup-env.ts  test-report.ts
vendor-patches/: README.md  coinutils-and-circuits.patch  transfer.rs.new
(+55 files in other folders)
